# lazyECS

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  ComponentContainer.hpp  README.md  Types.hpp  main.cpp
.cache/clangd/index/: Camera.cpp.8177C37C8F40C976.idx  Camera.h.7D70160BAF543117.idx  Color.h.AD10D85A5C4785C3.idx  ComponentArrayHandler.hpp.B56F94A4A04A3BFC.idx  ComponentManager.hpp.5D04B6BD4520B79A.idx  ECSConstants.hpp.DA22E2F8D1F9F1CC.idx  EntityManager.hpp.B708BCFD1B452EB2.idx  FrameBufferObject.cpp.B8E462EF122BFC4F.idx  FrameBufferObject.h.4337A55C3F2EC5F6.idx  HeightField.cpp.8C3DDEB955A9671F.idx  HeightField.h.DAA7A9716BB028AC.idx  Light.cpp.B216DA9D1BA188E5.idx  Light.h.810E84DCFACCBA61.idx  Matrix3.h.21CD72D73ED8B506.idx  Matrix4.h.960BBC9EA05FA1B9.idx  Mesh.cpp.85A6935A80523F4C.idx  Mesh.hpp.1EFD0592F0EA9F9E.idx  MeshReaderWriter.cpp.2F4129B92CDCC7FB.idx  MeshReaderWriter.h.EA39FDC5B4FAB9F6.idx  Minimal3D.cpp.3A3AC15178CF6210.idx  Minimal3D.h.116770AF1B738E8A.idx  Object3D.cpp.C61914DA007A92CC.idx  Object3D.h.CA9F420695EE34D7.idx  Orchestrator.hpp.D9ABB9DCDF6B7143.idx  PerlinNoise.cpp.E2B2922076379BCD.idx  PerlinNoise.h.5A454FB149B70FE5.idx  PhysicsSystem.cpp.4EAA8F7BBBBB53EE.idx  PhysicsSystem.hpp.C4B175B2A630F873.idx  RenderingSystem.cpp.566F7E719C12DD34.idx  RenderingSystem.hpp.FC81874A557D6E99.idx  RigidBody3D.hpp.1C96241339891C00.idx  Shader.cpp.5FF73BB0B233EBD4.idx  Shader.h.F589E332D06EC486.idx  Spawner.hpp.564BA26A68D9620F.idx  SystemManager.hpp.89351622DB602F42.idx  Texture2D.cpp.D0994FAB9A13ACE1.idx  Texture2D.h.C5191151EF4ABAD7.idx  Transform3D.cpp.AB8DCF80B4D2EC7B.idx  Transform3D.hpp.EBCC3E7DA0E7F02B.idx  Types.hpp.A5FC20B164E4079D.idx  (+114 more)
Applications/BaseApp/: BaseApp.cpp  BaseApp.h
Applications/Minimal3D/: CMakeLists.txt  Minimal3D.cpp  Minimal3D.h  launch.json  main.cpp  main_old.cpp
Applications/PotentialField/: CMakeLists.txt  Ego.cpp  Ego.h  GoalAndObstacle.hpp  PotentialField.cpp  PotentialField.h  PotentialFieldTypes.h  launch.json  launch.json.orig  main.cpp  scenario.py  scene.json
Applications/ROS2/install/: local_setup.sh  setup.sh
Applications/ROS2/install/point_cloud_publisher/lib/point_cloud_publisher/: my_node
Applications/ROS2/install/point_cloud_publisher/share/ament_index/resource_index/parent_prefix_path/: point_cloud_publisher
Applications/ROS2/install/point_cloud_publisher/share/point_cloud_publisher/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
Applications/ROS2/install/point_cloud_publisher/share/point_cloud_publisher/cmake/: point_cloud_publisherConfig.cmake
Applications/ROS2/log/: latest_build
Applications/ROS2/src/point_cloud_publisher/: CMakeLists.txt  package.xml
Applications/ROS2/src/point_cloud_publisher/src/: my_node.cpp
Applications/Raycast/: CMakeLists.txt  Ego.cpp  Ego.h  Raycast.cpp  Raycast.h  main.cpp  scenario.py  scene.json
Applications/WaveFront/: CMakeLists.txt  Ego.cpp  Ego.h  GoalAndObstacle.hpp  GridCell.hpp  WaveFront.cpp  WaveFront.h  WaveFrontTypes.h  main.cpp  scenario.py  scene.json
lazyECS/: CMakeLists.txt
lazyECS/Components/: Mesh.cpp  Mesh.hpp  RigidBody.hpp  RigidBody3D.hpp  Tag.cpp  Tag.h  Transform.hpp  Transform2D.hpp  Transform3D.cpp  Transform3D.hpp
lazyECS/Components/utils/: HeightField.cpp  HeightField.h
lazyECS/ECSCore/: ComponentArrayHandler.hpp  ComponentContainer.hpp.old  ComponentManager.hpp  ECSConstants.hpp  EntityManager.hpp  EventManagement.hpp  Orchestrator.hpp  SystemManager.hpp  Types.hpp
lazyECS/Scene/: Scene.h
lazyECS/Systems/: ManualControlSystem.cpp  ManualControlSystem.h  PhysicsSystem.cpp  PhysicsSystem.hpp  RenderingSystem.cpp  RenderingSystem.hpp  RenderingSystem2D.cpp  RenderingSystem2D.hpp  RenderingSystemRaylib.cpp  RenderingSystemRaylib.hpp  TagSystem.cpp  TagSystem.h
lazyECS/Systems/Rendering/: Gui.h  RenderingSystem.cpp  RenderingSystem.hpp
lazyECS/Systems/Rendering/meshes/: axis.mtl
lazyECS/Systems/Rendering/opengl-framework/src/: MeshReaderWriter.cpp  MeshReaderWriter.h  Object3D.h  Shader.cpp  Shader.h  openglframework.h
lazyECS/Systems/Rendering/shaders/: text.vs
lazyECS/Systems/opengl-framework/src/: openglframework.h
lazyECS/Systems/opengl-framework/src/maths/: Matrix4.h
lazyECS/Utilities/: Spawner.hpp
src/Components/: RigidBody.hpp  Transform.hpp
src/ECSCore/: ComponentArrayHandler.hpp  ComponentManager.hpp  EntityManager.hpp  Orchestrator.hpp  SystemManager.hpp  Types.hpp
src/Math/: Vec3.hpp
src/Systems/: PhysicsSystem.cpp  PhysicsSystem.hpp
